--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 	<div class="container">
-		<div class="header">Voice to text</div>
+		<div class="header">Voice to Text</div>
 		<div class="settings">
 			<div class="language">
 				<p>Language :</p>
@@ -25,7 +25,7 @@
 			<div class="icon">
 				<i class="bx bxs-microphone"></i>
 				<i class="bx bx-loader-alt bx-spin bx-rotate-90"></i>
-				<p>Recording</p>
+				<p>Let's Start</p>
 			</div>
 		</button>
 
